[gd_scene load_steps=8 format=3 uid="uid://burl5xrjt5esm"]

[ext_resource type="Script" path="res://Scripts/Ui/pause_menu.gd" id="1_jenpe"]
[ext_resource type="Shader" path="res://Shaders, Particle Effects/Blur.gdshader" id="1_shfad"]
[ext_resource type="PackedScene" uid="uid://owijehrx31h5" path="res://Scenes/Ui/options_menu.tscn" id="3_tm16e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1wfp4"]
shader = ExtResource("1_shfad")
shader_parameter/blur = 0.0
shader_parameter/brightness = 1.0

[sub_resource type="Animation" id="Animation_ljv3u"]
resource_name = "Pause"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [null, 2.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [1.0, 0.9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PauseMenu:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6r0pn"]
resource_name = "Unpause"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PauseMenu:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ge0k"]
_data = {
"Pause": SubResource("Animation_ljv3u"),
"Unpause": SubResource("Animation_6r0pn")
}

[node name="PauseMenu" type="ColorRect"]
process_mode = 3
material = SubResource("ShaderMaterial_1wfp4")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)
script = ExtResource("1_jenpe")

[node name="PauseMenu" type="MarginContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PauseMenu"]
custom_minimum_size = Vector2(750, 900)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 150
text = "PAUSED"

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(103.005, 19.675)
layout_mode = 2
size_flags_horizontal = 4

[node name="ContinueBtn" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "CONTINUE"

[node name="OptionsBtn" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "OPTIONS"

[node name="ExitLevelBtn" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "EXIT LEVEL"

[node name="QuitGameBtn" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "QUIT GAME"

[node name="ConfirmQuit" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="ConfirmQuit"]
custom_minimum_size = Vector2(2000, 600)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmQuit"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="ConfirmQuit/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "QUIT PUZZLE3D?"

[node name="Label2" type="Label" parent="ConfirmQuit/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 80
text = "ARE YOU SURE YOU WANT TO QUIT PUZZLE3D?"

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmQuit/VBoxContainer"]
custom_minimum_size = Vector2(0.935, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="CancelBtn" type="Button" parent="ConfirmQuit/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "CANCEL"

[node name="MarginContainer" type="MarginContainer" parent="ConfirmQuit/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(36.635, 0)
layout_mode = 2

[node name="ConfirmBtn" type="Button" parent="ConfirmQuit/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 100
text = "CONFIRM"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6ge0k")
}

[node name="OPTIONS" parent="." instance=ExtResource("3_tm16e")]
layout_mode = 1

[node name="BackBtn" type="Button" parent="OPTIONS"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = 752.0
offset_right = 478.0
offset_bottom = 852.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="PauseMenu/VBoxContainer/ContinueBtn" to="." method="_on_continue_btn_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/OptionsBtn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ExitLevelBtn" to="." method="_on_exit_level_btn_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/QuitGameBtn" to="." method="_on_quit_game_btn_pressed"]
[connection signal="pressed" from="ConfirmQuit/VBoxContainer/HBoxContainer/CancelBtn" to="." method="_on_cancel_btn_pressed"]
[connection signal="pressed" from="ConfirmQuit/VBoxContainer/HBoxContainer/ConfirmBtn" to="." method="_on_confirm_btn_pressed"]
[connection signal="pressed" from="OPTIONS/BackBtn" to="." method="_on_back_btn_pressed"]
